--- a/app/css/700.css
+++ b/app/css/700.css
@@ -7,8 +7,11 @@ p {
 h1, h2, h3, h4, h5, h6 {
   font: 100% "Passion One", cursive; }
 
-h2 {
+h1 {
   font-size: 4em; }
+
+h2 {
+  font-size: 2.5em; }
 
 .center {
   margin: 0 auto; }
