--- a/app/css/main.css
+++ b/app/css/main.css
@@ -28,8 +28,11 @@ body {
 .top {
   padding: 50px 0 0 0; }
 
+.success {
+  color: #095; }
+
 .error {
-  color: red; }
+  color: #d44950; }
 
 /*******************
 ///Button
