--- a/app/scss/700.scss
+++ b/app/scss/700.scss
@@ -40,8 +40,11 @@ body {
 	padding: 50px 0 0 0;
 }
 
+.success {
+	color: #095;
+}
 .error {
-	color: red; 
+	color: #d44950; 
 }
 
 /*******************
