adds todos to ReadMe, remove width on logo

--- a/app/css/970.css
+++ b/app/css/970.css
@@ -2,7 +2,7 @@
 ///Medium Screens
 ********************/
 #logo {
-  width: 136px; }
+  text-align: center; }
 
 .headphones {
   height: inherit; }
