--- a/app/css/main.css
+++ b/app/css/main.css
@@ -53,7 +53,7 @@ body {
 ///Header
 ********************/
 #logo {
-  width: 100px;
+  text-align: center;
   padding: 15px 0 0 0; }
 
 #logo a {
@@ -126,6 +126,6 @@ body {
 ///Medium Screens
 ********************/
   #logo {
-    width: 136px; }
+    text-align: center; }
   .headphones {
     height: inherit; } }
