--- a/app/scss/700.scss
+++ b/app/scss/700.scss
@@ -31,9 +31,10 @@ body {
 
 .content-block
 {
-	padding-left: 30px;
-    padding-right: 30px;
+	// padding-left: 30px;
+	// padding-right: 30px;
     padding-bottom: 150px;
+    padding-top: 27px;
 }
 
 .top{
